--- a/src/main/resources/fxmlFiles/CreateInvoicePanel.fxml
+++ b/src/main/resources/fxmlFiles/CreateInvoicePanel.fxml
@@ -19,7 +19,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="749.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.dealership.controllerClasses.CreateInvoiceController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#90b882" height="92.0" stroke="#90b882" strokeType="INSIDE" width="749.0" />
-      <Text layoutX="237.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Invoice">
+      <Text layoutX="311.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create Invoice">
          <font>
             <Font size="20.0" />
          </font>
@@ -40,5 +40,6 @@
       <Text layoutX="226.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Payment Total" />
       <Button layoutX="694.0" layoutY="493.0" mnemonicParsing="false" onAction="#GoBackToEmpOptions" text="Back" />
       <Button fx:id="generateInvoiceButton" layoutX="247.0" layoutY="331.0" mnemonicParsing="false" onAction="#generateInvoiceButton" text="Generate Invoice" />
+      <Button layoutX="606.0" layoutY="493.0" mnemonicParsing="false" onAction="#AutoFill" text="Button" />
    </children>
 </AnchorPane>
